Change position scroll to top

--- a/style.css
+++ b/style.css
@@ -815,6 +815,11 @@ p{
     width : 100vh;
 }
 
+.top {
+
+    float : left;
+    margin-left: 20px;
+
 }
 
 /*///////////////////////////////////////////////////////////////////////////*/
