--- a/style.css
+++ b/style.css
@@ -22,6 +22,19 @@ p{
 
 /*------------- MISE EN PAGE DU HEADER CONTENANT LE MENU -------------------------- */
 
+/* MENU BURGER ONLY POUR TELEPHONE */
+.sideNav{
+    display : none;      
+  }
+
+#openBtn{
+    display : none;
+}
+
+#closeBtn{
+    display : none;
+}
+/*///////////////////////////*/
 
 /* Mise en flex des éléments du header soit le logo de gauche, le menu et les logos réseaux sociaux */
 #header_home{
@@ -657,6 +670,20 @@ footer{
 
 /*---------------- SECTION 1 : ACCUEIL -------------------------------------------------*/
 
+/* MENU BURGER ONLY POUR TELEPHONE */
+.sideNav{
+    display : none;      
+  }
+
+#openBtn{
+    display : none;
+}
+
+#closeBtn{
+    display : none;
+}
+/*///////////////////////////*/
+
 #accueil{
     width : 100vh;
     justify-content: center;
@@ -848,16 +875,9 @@ p{
     width : 100vh;
 }
 
-ul{
-    
-}
-
-li{
-    
-}
-
 #presentation{
     width : 500px;
+    margin-top : 20px;
 }
 
 #accueil{
@@ -867,8 +887,7 @@ li{
 
 
 #header_home {   
-    align-items: center;
-    justify-content: space-between;
+    align-items: center;    
     border-top : 1px solid white;
     border-bottom : 1px solid white;
     padding : 5px 20px;
@@ -900,24 +919,52 @@ li{
 }
 
 .sideNav{
+    display : block;
+    height: 500px;
+    width: 250px;
+    position: fixed;
+    z-index: 1; /*Pour afficher le sideNav au dessus des boutons close et ouverture.*/
+    top: 0;
+    left: -250px;
+    background-color: #318eb0;
+    padding-top: 60px;
+    transition: left 0.5s ease;    
+}
 
-  height: 100%;
-  width: 250px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: -250px;
-  background-color: #e8e8e8;
-  padding-top: 60px;
-  transition: left 0.5s ease;
-    
+#openBtn{
+    display : block;
+    position : absolute;
+}
+
+#closeBtn{
+    display : block;
+}
+  
+.sideNav.active { /*Concaténation de .active à sideNav qui devient effective via javascript*/
+    left: 0; /*Modification de la position à 0 ce qui fait transiter le menu de la gauche vers la droite.*/    
+}
+  
+  
+.sideNav.close {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;    
+}
+
+ 
+.close {
+    position: absolute;
+    top: 0;
+    left: 15px;
+    font-size: 36px;
+    color : white;
 }
 
 
 
 
-
-    /* -------------- SECTION 2, OUR PRODUCTS------------------------------- */
+/* -------------- SECTION 2, OUR PRODUCTS------------------------------- */
 
 .productsView {    
     flex-direction: column-reverse;
@@ -1049,10 +1096,12 @@ p{
 
 .price{
     margin: 50px 20px 50px 20px;
+    width : 500px;
 }
 
 .sale{
     margin: 50px 20px 50px 20px;
+    width : 500px;
 }
 
 /*--------------------- SECTION 9 OUR BLOGS -----------------------*/
@@ -1074,6 +1123,20 @@ p{
 .p-sec9{
     text-align: left;
     padding : 0;
+}
+
+.img-sec9{
+    width : 500px;
+    height : 400px;
+}
+
+.blog-effects{
+    width : 500px;
+    height : 400px;
+}
+
+.blog-text, .p-sec9{
+    font-size: 1.7em;
 }
 
 /*--------------------- FOOTER -----------------------*/
